Angellist support additional field to the database to store the account_url additional field to the database to store the complete auth_hash (to make additional data in it available)

--- a/app/views/omnipopulus/auth/new.html.erb
+++ b/app/views/omnipopulus/auth/new.html.erb
@@ -9,7 +9,7 @@
   <div class="information">
     <h1>Sign in (or up)</h1>
     <p class="large">
-      You can use either your Twitter, Facebook, Github, or LinkedIn account to sign in or sign up.
+      You can use either your Twitter, Facebook, Github, LinkedIn, or AngelList account to sign in or sign up.
     </p>
     <p>
       Select your preferred method and you'll be sent off to authorise us to use your account.
@@ -22,4 +22,5 @@
   <%= facebook_login_button %>
   <%= github_login_button %>
   <%= linkedin_login_button %>
+  <%= angellist_login_button %>
 </div>
